--- a/public/src/scss/components/Dashboard/EditCard.scss
+++ b/public/src/scss/components/Dashboard/EditCard.scss
@@ -11,7 +11,7 @@
 	grid:
 		'header' auto
 		'content' 1fr /
-		auto;
+		calc(100vw - var(--sidebar-width));
 	
 	> .header,
 	> .content {
@@ -134,7 +134,6 @@
 			
 			display: flex;
 			flex-direction: column;
-			width: calc(100vw - var(--sidebar-width) - #{$margin * 2});
 			padding: 16px raw-repeat(3, $margin);
 			background: white;
 			border-radius: 8px;
@@ -176,6 +175,7 @@
 				}
 				
 				> .row-toggle {
+					flex-shrink: 0;
 					display: none;
 					align-items: center;
 					
