--- a/public/src/scss/components/Dashboard/EditDeck.scss
+++ b/public/src/scss/components/Dashboard/EditDeck.scss
@@ -2,15 +2,17 @@
 @import '../../mixins';
 
 @include dashboard-content('edit-deck') {
+	$margin: 30px;
+	
 	display: grid;
 	grid:
 		'header' auto
 		'content' 1fr /
-		auto;
+		calc(100vw - var(--sidebar-width));
 	
 	> .header,
 	> .content {
-		padding: 0 30px;
+		padding: 0 $margin;
 	}
 	
 	> .header {
@@ -75,13 +77,12 @@
 	> .content {
 		grid-area: content;
 		overflow-y: auto;
-		padding-bottom: 30px;
+		padding-bottom: $margin;
 		
 		> .box {
 			@include shadow-lg;
 			
-			width: calc(100vw - var(--sidebar-width) - #{30px * 2});
-			padding: 30px;
+			padding: $margin;
 			background: white;
 			border-radius: 8px;
 			
